--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "@rocketseat/eslint-config": "^2.1.0",
+    "eslint-plugin-import-helpers": "^1.3.1",
+    "eslint-plugin-tailwindcss": "^3.13.0"
   }
 }
