--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.1.0",
+    "@tailwindcss/typography": "^0.5.10",
     "eslint-plugin-import-helpers": "^1.3.1",
     "eslint-plugin-tailwindcss": "^3.13.0"
   }
